Fix H2 conflict - PostgreSQL only

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
 spring.thymeleaf.cache=false
 server.port=8080
+
+# Railway PostgreSQL (disable H2)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:testdb}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.h2.console.enabled=false
