💥 REMOVE H2 + FORCE PostgreSQL Dialect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
-# Railway PostgreSQL ONLY - NO H2
+# RAILWAY POSTGRESQL - H2 FORBIDDEN
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+# FORCE Hibernate Dialect (fixes metadata error)
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.h2.console.enabled=false
 
 server.port=${PORT:8080}
+logging.level.org.hibernate=ERROR
