--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,10 @@
-# RAILWAY POSTGRESQL - H2 FORBIDDEN
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
+# Railway auto-detects DATABASE_URL
+spring.datasource.url=\${DATABASE_URL:jdbc:h2:mem:testdb}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-# FORCE Hibernate Dialect (fixes metadata error)
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
-spring.h2.console.enabled=false
 
-server.port=${PORT:8080}
-logging.level.org.hibernate=ERROR
+# Required for healthz
+management.endpoints.web.exposure.include=health
+app.base-url=\${RAILWAY_PUBLIC_DOMAIN:https://localhost:8080}
