--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-# Railway auto-detects DATABASE_URL
-spring.datasource.url=\${DATABASE_URL:jdbc:h2:mem:testdb}
+spring.datasource.url=jdbc:postgresql://${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Required for healthz
 management.endpoints.web.exposure.include=health
-app.base-url=\${RAILWAY_PUBLIC_DOMAIN:https://localhost:8080}
+management.endpoint.health.show-details=always
+server.error.include-stacktrace=never
