--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,13 @@
-# === RAILWAY POSTGRESQL - 100% FIXED ===
-spring.datasource.url=jdbc:postgresql://\${DATABASE_URL#postgresql://}
+spring.datasource.url=jdbc:postgresql://${DATABASE_URL#postgresql://}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# CRITICAL: Force PostgreSQL dialect (bypasses auto-detection)
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
-# Thymeleaf
 spring.thymeleaf.cache=false
+server.port=${PORT:8080}
 
-# Server
-server.port=\${PORT:8080}
-
-# App
 app.base-url=https://paste-production-app.railway.app
