H2-only: Block Railway DB override

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.datasource.url=jdbc:postgresql://${DATABASE_URL#postgresql://}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+# H2 LOCAL - NO POSTGRES CRASH
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 
-spring.thymeleaf.cache=false
+# Railway overrides these
 server.port=${PORT:8080}
-
-app.base-url=https://paste-production-app.railway.app
+spring.thymeleaf.cache=false
